WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219807
Fix for accessibility layout tests related to VisiblePositions in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=219807
Summary
Fix for accessibility layout tests related to VisiblePositions in isolated tr...
Andres Gonzalez
Reported
2020-12-11 15:13:03 PST
Fix for accessibility layout tests related to VisiblePositions in isolated tree mode.
Attachments
Patch
(27.51 KB, patch)
2020-12-11 15:29 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(21.42 KB, patch)
2020-12-14 07:39 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-12-11 15:29:22 PST
Created
attachment 416052
[details]
Patch
chris fleizach
Comment 2
2020-12-11 15:32:06 PST
Comment on
attachment 416052
[details]
Patch seems ok if tests pass. slightly worried that updating children in render object hit test will cause perf issues
Andres Gonzalez
Comment 3
2020-12-14 07:39:59 PST
Created
attachment 416156
[details]
Patch
Andres Gonzalez
Comment 4
2020-12-14 07:42:56 PST
(In reply to chris fleizach from
comment #2
)
> Comment on
attachment 416052
[details]
> Patch > > seems ok if tests pass. > slightly worried that updating children in render object hit test will cause > perf issues
Agree, particularly I'm not sure about the impact on iOS, so I reverted that part of the change.
EWS
Comment 5
2020-12-14 10:59:58 PST
Committed
r270787
: <
https://trac.webkit.org/changeset/270787
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416156
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-12-14 11:01:48 PST
<
rdar://problem/72305119
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug