Fix for accessibility layout tests related to VisiblePositions in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=219807

Reviewed by Chris Fleizach.

Tests:
accessibility/mac/line-range-for-text-marker.html
accessibility/mac/visible-position-crash-for-text-node.html

- Moved remaining unimplemented AXIsolatedObject methods from the header
to the cpp file and added ASSERT_NOT_REACHED where pertinent. This will
allow to identify any method that needs implementation.
- Implemented the necessary VisiblePosition methods.
- Cleaned up and simplified platform code by calling directly into
AXCoreObject methods instead of unnecessary wrappers.

* accessibility/AccessibilityObjectInterface.h:
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityLabel]):
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::init):
(WebCore::AXIsolatedObject::updateChildrenIfNecessary):
(WebCore::AXIsolatedObject::accessibilityHitTest):
(WebCore::AXIsolatedObject::boundsForVisiblePositionRange const):
(WebCore::AXIsolatedObject::lengthForVisiblePositionRange const):
(WebCore::AXIsolatedObject::visiblePositionForBounds const):
(WebCore::AXIsolatedObject::visiblePositionForPoint const):
(WebCore::AXIsolatedObject::nextVisiblePosition const):
(WebCore::AXIsolatedObject::previousVisiblePosition const):
(WebCore::AXIsolatedObject::nextWordEnd const):
(WebCore::AXIsolatedObject::previousWordStart const):
(WebCore::AXIsolatedObject::nextLineEndPosition const):
(WebCore::AXIsolatedObject::previousLineStartPosition const):
(WebCore::AXIsolatedObject::nextSentenceEndPosition const):
(WebCore::AXIsolatedObject::previousSentenceStartPosition const):
(WebCore::AXIsolatedObject::nextParagraphEndPosition const):
(WebCore::AXIsolatedObject::previousParagraphStartPosition const):
(WebCore::AXIsolatedObject::visiblePositionForIndex const):
(WebCore::AXIsolatedObject::indexForVisiblePosition const):
(WebCore::AXIsolatedObject::accessibilityObjectForPosition const):
(WebCore::AXIsolatedObject::plainTextRangeForVisiblePositionRange const):
(WebCore::AXIsolatedObject::index const):
(WebCore::AXIsolatedObject::lineBreaks const):
(WebCore::AXIsolatedObject::textUnderElement const):
(WebCore::AXIsolatedObject::accessibilityHitTest const): Deleted.
* accessibility/isolatedtree/AXIsolatedObject.h:
* accessibility/mac/AccessibilityObjectBase.mm:
(WebCore::AccessibilityObject::titleAttributeValue const):
* accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase baseAccessibilityTitle]): Deleted.
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
(-[WebAccessibilityObjectWrapper accessibilityHitTest:]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):


Canonical link: https://commits.webkit.org/232443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270787 268f45cc-cd09-0410-ab3c-d52691b4dbfc