Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm
@@ -1171,7 +1171,7 @@ static void appendStringToResult(NSMutableString *result, NSString *string)
 
     // iOS doesn't distinguish between a title and description field,
     // so concatentation will yield the best result.
-    NSString *axTitle = [self baseAccessibilityTitle];
+    NSString *axTitle = self.axBackingObject->titleAttributeValue();
     NSString *axDescription = [self baseAccessibilityDescription];
     NSString *landmarkDescription = [self ariaLandmarkRoleDescription];
     NSString *interactiveVideoDescription = [self interactiveVideoDescription];
